# filetree-traversing

./: Cargo.toml  PKGBUILD  README.md  out.txt
src/: main.rs
src/filetree-traversing-0.1.10/: Cargo.toml
src/filetree-traversing-0.1.10/.github/workflows/: release.yml
src/filetree-traversing-0.1.10/src/: main.rs
src/filetree-traversing-0.1.10/wix/: main.wxs
wix/: main.wxs
