[package]
name = "filetree-traversing"
version = "0.1.11"
edition = "2021"
authors = ["Seal <will@kimbell.uk>"]
description = "A Rust library for working with file trees"
license = "MIT"
homepage = "https://github.com/seal/filetree-traversing"
repository = "https://github.com/seal/filetree-traversing"
readme = "README.md"
keywords = ["file", "tree", "directory", "filesystem"]
categories = ["filesystem"]
include = ["src/main.rs"]
[dependencies]
colored = "2.1.0"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.wix]
upgrade-guid = "29B3756A-9D79-4196-A2DA-EFD311E442F4"
path-guid = "561EDFEC-7BC9-47BB-81B3-2764ED30D5A4"
license = false
eula = false


[[bin]]
name = "filetree-traversing"
path = "src/main.rs"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# A GitHub repo to push Homebrew formulas to
tap = "seal/homebrew-tap"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = true
